Ajustes de links

--- a/index.html
+++ b/index.html
@@ -47,9 +47,20 @@
         </div>
 
         <div class="socialLinks">
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-github"></i>
-            <i class="fa-brands fa-linkedin"></i>
+            
+            <a href="#">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            
+            <a href="#">
+                <i class="fa-brands fa-github"></i>
+            </a>
+
+            <a href="#">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+
+
         </div>
 
         <footer>
